// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`It adds borders 1`] = `
<div>
  <div
    class="MuiTableContainer-root"
  >
    <table
      class="MuiTable-root Table-withBorder-118"
      data-id="table"
    >
      <thead
        class="MuiTableHead-root TableHead-whiteBackground-122"
        data-id="table-head"
      >
        <th
          class="MuiTableCell-root MuiTableCell-head TableCell-withPadding-124 TableCell-withPadding-129 TableCell-withVerticalAlign-123 TableCell-withVerticalAlign-128 TableCell-withFontSize-126 TableCell-withFontSize-130 TableCell-withBorder-127"
          data-id="table-cell"
          scope="col"
        >
          Name
        </th>
        <th
          class="MuiTableCell-root MuiTableCell-head TableCell-withPadding-124 TableCell-withPadding-132 TableCell-withVerticalAlign-123 TableCell-withVerticalAlign-131 TableCell-withFontSize-126 TableCell-withFontSize-133 TableCell-withBorder-127"
          data-id="table-cell"
          scope="col"
        >
          Age
        </th>
        <th
          class="MuiTableCell-root MuiTableCell-head TableCell-withPadding-124 TableCell-withPadding-135 TableCell-withVerticalAlign-123 TableCell-withVerticalAlign-134 TableCell-withFontSize-126 TableCell-withFontSize-136 TableCell-withBorder-127"
          data-id="table-cell"
          scope="col"
        >
          Role
        </th>
      </thead>
      <tbody
        class="MuiTableBody-root"
        data-id="table-body"
      >
        <tr
          class="MuiTableRow-root"
          data-id="table-row"
        >
          <td
            class="MuiTableCell-root MuiTableCell-body TableCell-withPadding-124 TableCell-withPadding-140 TableCell-withVerticalAlign-123 TableCell-withVerticalAlign-139 TableCell-withFontSize-126 TableCell-withFontSize-141 TableCell-withBorder-127"
            data-id="table-cell"
          >
            Jane
          </td>
          <td
            class="MuiTableCell-root MuiTableCell-body TableCell-withPadding-124 TableCell-withPadding-143 TableCell-withVerticalAlign-123 TableCell-withVerticalAlign-142 TableCell-withFontSize-126 TableCell-withFontSize-144 TableCell-withBorder-127"
            data-id="table-cell"
          >
            32
          </td>
          <td
            class="MuiTableCell-root MuiTableCell-body TableCell-withPadding-124 TableCell-withPadding-146 TableCell-withVerticalAlign-123 TableCell-withVerticalAlign-145 TableCell-withFontSize-126 TableCell-withFontSize-147 TableCell-withBorder-127"
            data-id="table-cell"
          >
            Software Engineer
          </td>
        </tr>
        <tr
          class="MuiTableRow-root"
          data-id="table-row"
        >
          <td
            class="MuiTableCell-root MuiTableCell-body TableCell-withPadding-124 TableCell-withPadding-149 TableCell-withVerticalAlign-123 TableCell-withVerticalAlign-148 TableCell-withFontSize-126 TableCell-withFontSize-150 TableCell-withBorder-127"
            data-id="table-cell"
          >
            John
          </td>
          <td
            class="MuiTableCell-root MuiTableCell-body TableCell-withPadding-124 TableCell-withPadding-152 TableCell-withVerticalAlign-123 TableCell-withVerticalAlign-151 TableCell-withFontSize-126 TableCell-withFontSize-153 TableCell-withBorder-127"
            data-id="table-cell"
          >
            43
          </td>
          <td
            class="MuiTableCell-root MuiTableCell-body TableCell-withPadding-124 TableCell-withPadding-155 TableCell-withVerticalAlign-123 TableCell-withVerticalAlign-154 TableCell-withFontSize-126 TableCell-withFontSize-156 TableCell-withBorder-127"
            data-id="table-cell"
          >
            Business Analyst
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;

exports[`It adds class name 1`] = `
<div>
  <div
    class="MuiTableContainer-root"
  >
    <table
      class="MuiTable-root myCustomClass"
      data-id="table"
    >
      <thead
        class="MuiTableHead-root TableHead-whiteBackground-278"
        data-id="table-head"
      >
        <th
          class="MuiTableCell-root MuiTableCell-head TableCell-withPadding-280 TableCell-withPadding-285 TableCell-withVerticalAlign-279 TableCell-withVerticalAlign-284 TableCell-withFontSize-282 TableCell-withFontSize-286 TableCell-withoutFirstLastPadding-281"
          data-id="table-cell"
          scope="col"
        >
          Name
        </th>
        <th
          class="MuiTableCell-root MuiTableCell-head TableCell-withPadding-280 TableCell-withPadding-288 TableCell-withVerticalAlign-279 TableCell-withVerticalAlign-287 TableCell-withFontSize-282 TableCell-withFontSize-289 TableCell-withoutFirstLastPadding-281"
          data-id="table-cell"
          scope="col"
        >
          Age
        </th>
        <th
          class="MuiTableCell-root MuiTableCell-head TableCell-withPadding-280 TableCell-withPadding-291 TableCell-withVerticalAlign-279 TableCell-withVerticalAlign-290 TableCell-withFontSize-282 TableCell-withFontSize-292 TableCell-withoutFirstLastPadding-281"
          data-id="table-cell"
          scope="col"
        >
          Role
        </th>
      </thead>
      <tbody
        class="MuiTableBody-root"
        data-id="table-body"
      >
        <tr
          class="MuiTableRow-root"
          data-id="table-row"
        >
          <td
            class="MuiTableCell-root MuiTableCell-body TableCell-withPadding-280 TableCell-withPadding-296 TableCell-withVerticalAlign-279 TableCell-withVerticalAlign-295 TableCell-withFontSize-282 TableCell-withFontSize-297 TableCell-withoutFirstLastPadding-281"
            data-id="table-cell"
          >
            Jane
          </td>
          <td
            class="MuiTableCell-root MuiTableCell-body TableCell-withPadding-280 TableCell-withPadding-299 TableCell-withVerticalAlign-279 TableCell-withVerticalAlign-298 TableCell-withFontSize-282 TableCell-withFontSize-300 TableCell-withoutFirstLastPadding-281"
            data-id="table-cell"
          >
            32
          </td>
          <td
            class="MuiTableCell-root MuiTableCell-body TableCell-withPadding-280 TableCell-withPadding-302 TableCell-withVerticalAlign-279 TableCell-withVerticalAlign-301 TableCell-withFontSize-282 TableCell-withFontSize-303 TableCell-withoutFirstLastPadding-281"
            data-id="table-cell"
          >
            Software Engineer
          </td>
        </tr>
        <tr
          class="MuiTableRow-root"
          data-id="table-row"
        >
          <td
            class="MuiTableCell-root MuiTableCell-body TableCell-withPadding-280 TableCell-withPadding-305 TableCell-withVerticalAlign-279 TableCell-withVerticalAlign-304 TableCell-withFontSize-282 TableCell-withFontSize-306 TableCell-withoutFirstLastPadding-281"
            data-id="table-cell"
          >
            John
          </td>
          <td
            class="MuiTableCell-root MuiTableCell-body TableCell-withPadding-280 TableCell-withPadding-308 TableCell-withVerticalAlign-279 TableCell-withVerticalAlign-307 TableCell-withFontSize-282 TableCell-withFontSize-309 TableCell-withoutFirstLastPadding-281"
            data-id="table-cell"
          >
            43
          </td>
          <td
            class="MuiTableCell-root MuiTableCell-body TableCell-withPadding-280 TableCell-withPadding-311 TableCell-withVerticalAlign-279 TableCell-withVerticalAlign-310 TableCell-withFontSize-282 TableCell-withFontSize-312 TableCell-withoutFirstLastPadding-281"
            data-id="table-cell"
          >
            Business Analyst
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;

exports[`It adds hover 1`] = `
<div>
  <div
    class="MuiTableContainer-root"
  >
    <table
      class="MuiTable-root"
      data-id="table"
    >
      <thead
        class="MuiTableHead-root TableHead-whiteBackground-200"
        data-id="table-head"
      >
        <th
          class="MuiTableCell-root MuiTableCell-head TableCell-withPadding-202 TableCell-withPadding-207 TableCell-withVerticalAlign-201 TableCell-withVerticalAlign-206 TableCell-withFontSize-204 TableCell-withFontSize-208"
          data-id="table-cell"
          scope="col"
        >
          Name
        </th>
        <th
          class="MuiTableCell-root MuiTableCell-head TableCell-withPadding-202 TableCell-withPadding-210 TableCell-withVerticalAlign-201 TableCell-withVerticalAlign-209 TableCell-withFontSize-204 TableCell-withFontSize-211"
          data-id="table-cell"
          scope="col"
        >
          Age
        </th>
        <th
          class="MuiTableCell-root MuiTableCell-head TableCell-withPadding-202 TableCell-withPadding-213 TableCell-withVerticalAlign-201 TableCell-withVerticalAlign-212 TableCell-withFontSize-204 TableCell-withFontSize-214"
          data-id="table-cell"
          scope="col"
        >
          Role
        </th>
      </thead>
      <tbody
        class="MuiTableBody-root"
        data-id="table-body"
      >
        <tr
          class="MuiTableRow-root TableRow-withHover-216"
          data-id="table-row"
        >
          <td
            class="MuiTableCell-root MuiTableCell-body TableCell-withPadding-202 TableCell-withPadding-218 TableCell-withVerticalAlign-201 TableCell-withVerticalAlign-217 TableCell-withFontSize-204 TableCell-withFontSize-219"
            data-id="table-cell"
          >
            Jane
          </td>
          <td
            class="MuiTableCell-root MuiTableCell-body TableCell-withPadding-202 TableCell-withPadding-221 TableCell-withVerticalAlign-201 TableCell-withVerticalAlign-220 TableCell-withFontSize-204 TableCell-withFontSize-222"
            data-id="table-cell"
          >
            32
          </td>
          <td
            class="MuiTableCell-root MuiTableCell-body TableCell-withPadding-202 TableCell-withPadding-224 TableCell-withVerticalAlign-201 TableCell-withVerticalAlign-223 TableCell-withFontSize-204 TableCell-withFontSize-225"
            data-id="table-cell"
          >
            Software Engineer
          </td>
        </tr>
        <tr
          class="MuiTableRow-root TableRow-withHover-216"
          data-id="table-row"
        >
          <td
            class="MuiTableCell-root MuiTableCell-body TableCell-withPadding-202 TableCell-withPadding-227 TableCell-withVerticalAlign-201 TableCell-withVerticalAlign-226 TableCell-withFontSize-204 TableCell-withFontSize-228"
            data-id="table-cell"
          >
            John
          </td>
          <td
            class="MuiTableCell-root MuiTableCell-body TableCell-withPadding-202 TableCell-withPadding-230 TableCell-withVerticalAlign-201 TableCell-withVerticalAlign-229 TableCell-withFontSize-204 TableCell-withFontSize-231"
            data-id="table-cell"
          >
            43
          </td>
          <td
            class="MuiTableCell-root MuiTableCell-body TableCell-withPadding-202 TableCell-withPadding-233 TableCell-withVerticalAlign-201 TableCell-withVerticalAlign-232 TableCell-withFontSize-204 TableCell-withFontSize-234"
            data-id="table-cell"
          >
            Business Analyst
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;

exports[`It adds sticky header 1`] = `
<div>
  <div
    class="MuiTableContainer-root TableContainer-withStickyHeader-237"
  >
    <table
      class="MuiTable-root MuiTable-stickyHeader"
      data-id="table"
    >
      <thead
        class="MuiTableHead-root TableHead-whiteBackground-239"
        data-id="table-head"
      >
        <th
          class="MuiTableCell-root MuiTableCell-head TableCell-withPadding-241 TableCell-withPadding-246 TableCell-withVerticalAlign-240 TableCell-withVerticalAlign-245 TableCell-withFontSize-243 TableCell-withFontSize-247 TableCell-withoutFirstLastPadding-242 MuiTableCell-stickyHeader"
          data-id="table-cell"
          scope="col"
        >
          Name
        </th>
        <th
          class="MuiTableCell-root MuiTableCell-head TableCell-withPadding-241 TableCell-withPadding-249 TableCell-withVerticalAlign-240 TableCell-withVerticalAlign-248 TableCell-withFontSize-243 TableCell-withFontSize-250 TableCell-withoutFirstLastPadding-242 MuiTableCell-stickyHeader"
          data-id="table-cell"
          scope="col"
        >
          Age
        </th>
        <th
          class="MuiTableCell-root MuiTableCell-head TableCell-withPadding-241 TableCell-withPadding-252 TableCell-withVerticalAlign-240 TableCell-withVerticalAlign-251 TableCell-withFontSize-243 TableCell-withFontSize-253 TableCell-withoutFirstLastPadding-242 MuiTableCell-stickyHeader"
          data-id="table-cell"
          scope="col"
        >
          Role
        </th>
      </thead>
      <tbody
        class="MuiTableBody-root"
        data-id="table-body"
      >
        <tr
          class="MuiTableRow-root"
          data-id="table-row"
        >
          <td
            class="MuiTableCell-root MuiTableCell-body TableCell-withPadding-241 TableCell-withPadding-257 TableCell-withVerticalAlign-240 TableCell-withVerticalAlign-256 TableCell-withFontSize-243 TableCell-withFontSize-258 TableCell-withoutFirstLastPadding-242"
            data-id="table-cell"
          >
            Jane
          </td>
          <td
            class="MuiTableCell-root MuiTableCell-body TableCell-withPadding-241 TableCell-withPadding-260 TableCell-withVerticalAlign-240 TableCell-withVerticalAlign-259 TableCell-withFontSize-243 TableCell-withFontSize-261 TableCell-withoutFirstLastPadding-242"
            data-id="table-cell"
          >
            32
          </td>
          <td
            class="MuiTableCell-root MuiTableCell-body TableCell-withPadding-241 TableCell-withPadding-263 TableCell-withVerticalAlign-240 TableCell-withVerticalAlign-262 TableCell-withFontSize-243 TableCell-withFontSize-264 TableCell-withoutFirstLastPadding-242"
            data-id="table-cell"
          >
            Software Engineer
          </td>
        </tr>
        <tr
          class="MuiTableRow-root"
          data-id="table-row"
        >
          <td
            class="MuiTableCell-root MuiTableCell-body TableCell-withPadding-241 TableCell-withPadding-266 TableCell-withVerticalAlign-240 TableCell-withVerticalAlign-265 TableCell-withFontSize-243 TableCell-withFontSize-267 TableCell-withoutFirstLastPadding-242"
            data-id="table-cell"
          >
            John
          </td>
          <td
            class="MuiTableCell-root MuiTableCell-body TableCell-withPadding-241 TableCell-withPadding-269 TableCell-withVerticalAlign-240 TableCell-withVerticalAlign-268 TableCell-withFontSize-243 TableCell-withFontSize-270 TableCell-withoutFirstLastPadding-242"
            data-id="table-cell"
          >
            43
          </td>
          <td
            class="MuiTableCell-root MuiTableCell-body TableCell-withPadding-241 TableCell-withPadding-272 TableCell-withVerticalAlign-240 TableCell-withVerticalAlign-271 TableCell-withFontSize-243 TableCell-withFontSize-273 TableCell-withoutFirstLastPadding-242"
            data-id="table-cell"
          >
            Business Analyst
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;

exports[`It adds stripes 1`] = `
<div>
  <div
    class="MuiTableContainer-root"
  >
    <table
      class="MuiTable-root"
      data-id="table"
    >
      <thead
        class="MuiTableHead-root TableHead-whiteBackground-161"
        data-id="table-head"
      >
        <th
          class="MuiTableCell-root MuiTableCell-head TableCell-withPadding-163 TableCell-withPadding-168 TableCell-withVerticalAlign-162 TableCell-withVerticalAlign-167 TableCell-withFontSize-165 TableCell-withFontSize-169"
          data-id="table-cell"
          scope="col"
        >
          Name
        </th>
        <th
          class="MuiTableCell-root MuiTableCell-head TableCell-withPadding-163 TableCell-withPadding-171 TableCell-withVerticalAlign-162 TableCell-withVerticalAlign-170 TableCell-withFontSize-165 TableCell-withFontSize-172"
          data-id="table-cell"
          scope="col"
        >
          Age
        </th>
        <th
          class="MuiTableCell-root MuiTableCell-head TableCell-withPadding-163 TableCell-withPadding-174 TableCell-withVerticalAlign-162 TableCell-withVerticalAlign-173 TableCell-withFontSize-165 TableCell-withFontSize-175"
          data-id="table-cell"
          scope="col"
        >
          Role
        </th>
      </thead>
      <tbody
        class="MuiTableBody-root"
        data-id="table-body"
      >
        <tr
          class="MuiTableRow-root TableRow-withStripes-176"
          data-id="table-row"
        >
          <td
            class="MuiTableCell-root MuiTableCell-body TableCell-withPadding-163 TableCell-withPadding-179 TableCell-withVerticalAlign-162 TableCell-withVerticalAlign-178 TableCell-withFontSize-165 TableCell-withFontSize-180"
            data-id="table-cell"
          >
            Jane
          </td>
          <td
            class="MuiTableCell-root MuiTableCell-body TableCell-withPadding-163 TableCell-withPadding-182 TableCell-withVerticalAlign-162 TableCell-withVerticalAlign-181 TableCell-withFontSize-165 TableCell-withFontSize-183"
            data-id="table-cell"
          >
            32
          </td>
          <td
            class="MuiTableCell-root MuiTableCell-body TableCell-withPadding-163 TableCell-withPadding-185 TableCell-withVerticalAlign-162 TableCell-withVerticalAlign-184 TableCell-withFontSize-165 TableCell-withFontSize-186"
            data-id="table-cell"
          >
            Software Engineer
          </td>
        </tr>
        <tr
          class="MuiTableRow-root TableRow-withStripes-176"
          data-id="table-row"
        >
          <td
            class="MuiTableCell-root MuiTableCell-body TableCell-withPadding-163 TableCell-withPadding-188 TableCell-withVerticalAlign-162 TableCell-withVerticalAlign-187 TableCell-withFontSize-165 TableCell-withFontSize-189"
            data-id="table-cell"
          >
            John
          </td>
          <td
            class="MuiTableCell-root MuiTableCell-body TableCell-withPadding-163 TableCell-withPadding-191 TableCell-withVerticalAlign-162 TableCell-withVerticalAlign-190 TableCell-withFontSize-165 TableCell-withFontSize-192"
            data-id="table-cell"
          >
            43
          </td>
          <td
            class="MuiTableCell-root MuiTableCell-body TableCell-withPadding-163 TableCell-withPadding-194 TableCell-withVerticalAlign-162 TableCell-withVerticalAlign-193 TableCell-withFontSize-165 TableCell-withFontSize-195"
            data-id="table-cell"
          >
            Business Analyst
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;

exports[`It renders 1`] = `
<div>
  <div
    class="MuiTableContainer-root"
  >
    <table
      class="MuiTable-root"
      data-id="table"
    >
      <thead
        class="MuiTableHead-root TableHead-whiteBackground-5"
        data-id="table-head"
      >
        <th
          class="MuiTableCell-root MuiTableCell-head TableCell-withPadding-7 TableCell-withPadding-12 TableCell-withVerticalAlign-6 TableCell-withVerticalAlign-11 TableCell-withFontSize-9 TableCell-withFontSize-13 TableCell-withoutFirstLastPadding-8"
          data-id="table-cell"
          scope="col"
        >
          Name
        </th>
        <th
          class="MuiTableCell-root MuiTableCell-head TableCell-withPadding-7 TableCell-withPadding-15 TableCell-withVerticalAlign-6 TableCell-withVerticalAlign-14 TableCell-withFontSize-9 TableCell-withFontSize-16 TableCell-withoutFirstLastPadding-8"
          data-id="table-cell"
          scope="col"
        >
          Age
        </th>
        <th
          class="MuiTableCell-root MuiTableCell-head TableCell-withPadding-7 TableCell-withPadding-18 TableCell-withVerticalAlign-6 TableCell-withVerticalAlign-17 TableCell-withFontSize-9 TableCell-withFontSize-19 TableCell-withoutFirstLastPadding-8"
          data-id="table-cell"
          scope="col"
        >
          Role
        </th>
      </thead>
      <tbody
        class="MuiTableBody-root"
        data-id="table-body"
      >
        <tr
          class="MuiTableRow-root"
          data-id="table-row"
        >
          <td
            class="MuiTableCell-root MuiTableCell-body TableCell-withPadding-7 TableCell-withPadding-23 TableCell-withVerticalAlign-6 TableCell-withVerticalAlign-22 TableCell-withFontSize-9 TableCell-withFontSize-24 TableCell-withoutFirstLastPadding-8"
            data-id="table-cell"
          >
            Jane
          </td>
          <td
            class="MuiTableCell-root MuiTableCell-body TableCell-withPadding-7 TableCell-withPadding-26 TableCell-withVerticalAlign-6 TableCell-withVerticalAlign-25 TableCell-withFontSize-9 TableCell-withFontSize-27 TableCell-withoutFirstLastPadding-8"
            data-id="table-cell"
          >
            32
          </td>
          <td
            class="MuiTableCell-root MuiTableCell-body TableCell-withPadding-7 TableCell-withPadding-29 TableCell-withVerticalAlign-6 TableCell-withVerticalAlign-28 TableCell-withFontSize-9 TableCell-withFontSize-30 TableCell-withoutFirstLastPadding-8"
            data-id="table-cell"
          >
            Software Engineer
          </td>
        </tr>
        <tr
          class="MuiTableRow-root"
          data-id="table-row"
        >
          <td
            class="MuiTableCell-root MuiTableCell-body TableCell-withPadding-7 TableCell-withPadding-32 TableCell-withVerticalAlign-6 TableCell-withVerticalAlign-31 TableCell-withFontSize-9 TableCell-withFontSize-33 TableCell-withoutFirstLastPadding-8"
            data-id="table-cell"
          >
            John
          </td>
          <td
            class="MuiTableCell-root MuiTableCell-body TableCell-withPadding-7 TableCell-withPadding-35 TableCell-withVerticalAlign-6 TableCell-withVerticalAlign-34 TableCell-withFontSize-9 TableCell-withFontSize-36 TableCell-withoutFirstLastPadding-8"
            data-id="table-cell"
          >
            43
          </td>
          <td
            class="MuiTableCell-root MuiTableCell-body TableCell-withPadding-7 TableCell-withPadding-38 TableCell-withVerticalAlign-6 TableCell-withVerticalAlign-37 TableCell-withFontSize-9 TableCell-withFontSize-39 TableCell-withoutFirstLastPadding-8"
            data-id="table-cell"
          >
            Business Analyst
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;

exports[`It uses medium padding 1`] = `
<div>
  <div
    class="MuiTableContainer-root"
  >
    <table
      class="MuiTable-root"
      data-id="table"
    >
      <thead
        class="MuiTableHead-root TableHead-whiteBackground-83"
        data-id="table-head"
      >
        <th
          class="MuiTableCell-root MuiTableCell-head TableCell-withPadding-85 TableCell-withPadding-90 TableCell-withVerticalAlign-84 TableCell-withVerticalAlign-89 TableCell-withFontSize-87 TableCell-withFontSize-91 TableCell-withoutFirstLastPadding-86"
          data-id="table-cell"
          scope="col"
        >
          Name
        </th>
        <th
          class="MuiTableCell-root MuiTableCell-head TableCell-withPadding-85 TableCell-withPadding-93 TableCell-withVerticalAlign-84 TableCell-withVerticalAlign-92 TableCell-withFontSize-87 TableCell-withFontSize-94 TableCell-withoutFirstLastPadding-86"
          data-id="table-cell"
          scope="col"
        >
          Age
        </th>
        <th
          class="MuiTableCell-root MuiTableCell-head TableCell-withPadding-85 TableCell-withPadding-96 TableCell-withVerticalAlign-84 TableCell-withVerticalAlign-95 TableCell-withFontSize-87 TableCell-withFontSize-97 TableCell-withoutFirstLastPadding-86"
          data-id="table-cell"
          scope="col"
        >
          Role
        </th>
      </thead>
      <tbody
        class="MuiTableBody-root"
        data-id="table-body"
      >
        <tr
          class="MuiTableRow-root"
          data-id="table-row"
        >
          <td
            class="MuiTableCell-root MuiTableCell-body TableCell-withPadding-85 TableCell-withPadding-101 TableCell-withVerticalAlign-84 TableCell-withVerticalAlign-100 TableCell-withFontSize-87 TableCell-withFontSize-102 TableCell-withoutFirstLastPadding-86"
            data-id="table-cell"
          >
            Jane
          </td>
          <td
            class="MuiTableCell-root MuiTableCell-body TableCell-withPadding-85 TableCell-withPadding-104 TableCell-withVerticalAlign-84 TableCell-withVerticalAlign-103 TableCell-withFontSize-87 TableCell-withFontSize-105 TableCell-withoutFirstLastPadding-86"
            data-id="table-cell"
          >
            32
          </td>
          <td
            class="MuiTableCell-root MuiTableCell-body TableCell-withPadding-85 TableCell-withPadding-107 TableCell-withVerticalAlign-84 TableCell-withVerticalAlign-106 TableCell-withFontSize-87 TableCell-withFontSize-108 TableCell-withoutFirstLastPadding-86"
            data-id="table-cell"
          >
            Software Engineer
          </td>
        </tr>
        <tr
          class="MuiTableRow-root"
          data-id="table-row"
        >
          <td
            class="MuiTableCell-root MuiTableCell-body TableCell-withPadding-85 TableCell-withPadding-110 TableCell-withVerticalAlign-84 TableCell-withVerticalAlign-109 TableCell-withFontSize-87 TableCell-withFontSize-111 TableCell-withoutFirstLastPadding-86"
            data-id="table-cell"
          >
            John
          </td>
          <td
            class="MuiTableCell-root MuiTableCell-body TableCell-withPadding-85 TableCell-withPadding-113 TableCell-withVerticalAlign-84 TableCell-withVerticalAlign-112 TableCell-withFontSize-87 TableCell-withFontSize-114 TableCell-withoutFirstLastPadding-86"
            data-id="table-cell"
          >
            43
          </td>
          <td
            class="MuiTableCell-root MuiTableCell-body TableCell-withPadding-85 TableCell-withPadding-116 TableCell-withVerticalAlign-84 TableCell-withVerticalAlign-115 TableCell-withFontSize-87 TableCell-withFontSize-117 TableCell-withoutFirstLastPadding-86"
            data-id="table-cell"
          >
            Business Analyst
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;

exports[`It uses small padding 1`] = `
<div>
  <div
    class="MuiTableContainer-root"
  >
    <table
      class="MuiTable-root"
      data-id="table"
    >
      <thead
        class="MuiTableHead-root TableHead-whiteBackground-44"
        data-id="table-head"
      >
        <th
          class="MuiTableCell-root MuiTableCell-head TableCell-withPadding-46 TableCell-withPadding-51 TableCell-withVerticalAlign-45 TableCell-withVerticalAlign-50 TableCell-withFontSize-48 TableCell-withFontSize-52 TableCell-withoutFirstLastPadding-47"
          data-id="table-cell"
          scope="col"
        >
          Name
        </th>
        <th
          class="MuiTableCell-root MuiTableCell-head TableCell-withPadding-46 TableCell-withPadding-54 TableCell-withVerticalAlign-45 TableCell-withVerticalAlign-53 TableCell-withFontSize-48 TableCell-withFontSize-55 TableCell-withoutFirstLastPadding-47"
          data-id="table-cell"
          scope="col"
        >
          Age
        </th>
        <th
          class="MuiTableCell-root MuiTableCell-head TableCell-withPadding-46 TableCell-withPadding-57 TableCell-withVerticalAlign-45 TableCell-withVerticalAlign-56 TableCell-withFontSize-48 TableCell-withFontSize-58 TableCell-withoutFirstLastPadding-47"
          data-id="table-cell"
          scope="col"
        >
          Role
        </th>
      </thead>
      <tbody
        class="MuiTableBody-root"
        data-id="table-body"
      >
        <tr
          class="MuiTableRow-root"
          data-id="table-row"
        >
          <td
            class="MuiTableCell-root MuiTableCell-body TableCell-withPadding-46 TableCell-withPadding-62 TableCell-withVerticalAlign-45 TableCell-withVerticalAlign-61 TableCell-withFontSize-48 TableCell-withFontSize-63 TableCell-withoutFirstLastPadding-47"
            data-id="table-cell"
          >
            Jane
          </td>
          <td
            class="MuiTableCell-root MuiTableCell-body TableCell-withPadding-46 TableCell-withPadding-65 TableCell-withVerticalAlign-45 TableCell-withVerticalAlign-64 TableCell-withFontSize-48 TableCell-withFontSize-66 TableCell-withoutFirstLastPadding-47"
            data-id="table-cell"
          >
            32
          </td>
          <td
            class="MuiTableCell-root MuiTableCell-body TableCell-withPadding-46 TableCell-withPadding-68 TableCell-withVerticalAlign-45 TableCell-withVerticalAlign-67 TableCell-withFontSize-48 TableCell-withFontSize-69 TableCell-withoutFirstLastPadding-47"
            data-id="table-cell"
          >
            Software Engineer
          </td>
        </tr>
        <tr
          class="MuiTableRow-root"
          data-id="table-row"
        >
          <td
            class="MuiTableCell-root MuiTableCell-body TableCell-withPadding-46 TableCell-withPadding-71 TableCell-withVerticalAlign-45 TableCell-withVerticalAlign-70 TableCell-withFontSize-48 TableCell-withFontSize-72 TableCell-withoutFirstLastPadding-47"
            data-id="table-cell"
          >
            John
          </td>
          <td
            class="MuiTableCell-root MuiTableCell-body TableCell-withPadding-46 TableCell-withPadding-74 TableCell-withVerticalAlign-45 TableCell-withVerticalAlign-73 TableCell-withFontSize-48 TableCell-withFontSize-75 TableCell-withoutFirstLastPadding-47"
            data-id="table-cell"
          >
            43
          </td>
          <td
            class="MuiTableCell-root MuiTableCell-body TableCell-withPadding-46 TableCell-withPadding-77 TableCell-withVerticalAlign-45 TableCell-withVerticalAlign-76 TableCell-withFontSize-48 TableCell-withFontSize-78 TableCell-withoutFirstLastPadding-47"
            data-id="table-cell"
          >
            Business Analyst
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;
